fixing lor formatting on mobile

--- a/src/components/pages/pages.css
+++ b/src/components/pages/pages.css
@@ -6,212 +6,219 @@
   padding: 20px;
   margin: 0 auto;
 }
-  
-  .about-header, .testimonial-header {
-    color: lightgray;
-    font-size: 4rem;
-    font-weight: bold;
-    margin-top: 20px;
-    text-align: center;
-  }
 
-  .LOR-header, .LOR-link{
-    color: lightgray;
-    font-weight: bold;
-    margin-top: 20px;
-    text-align: center;
-  }
-  
-  .about-paragraph {
-    color: lightgray;
-    font-size: 2rem;
-    margin-top: 20px;
-    margin-left: 20%;
-    margin-right: 20%;
-    text-align: center;
-  }
+.about-header,
+.testimonial-header {
+  color: lightgray;
+  font-size: 4rem;
+  font-weight: bold;
+  margin-top: 20px;
+  text-align: center;
+}
 
-  .card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-  }
-  
-  .card {
-    display: flex;
-    flex-direction: column;
-    width: 400px;
-    height: auto;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    margin: 20px;
-  }
+.LOR-header,
+.LOR-link {
+  color: lightgray;
+  font-weight: bold;
+  margin-top: 20px;
+  text-align: center;
+}
 
-  .card:hover {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    transform: scale(1.05);
-  }
-  
-  .card-image {
-    width: 100%;
-    height: 60%; /* set the height to 60% */
-    object-fit: contain;
-  }
-  
-  .card-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: auto; /* set the height to 40% */
-    padding: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-  
-  .card-title {
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  
-  .card-description {
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
-  
-  .card-link {
-    display: block;
-    margin-top: 10px;
-    text-align: center;
-  }
+.about-paragraph {
+  color: lightgray;
+  font-size: 2rem;
+  margin-top: 20px;
+  margin-left: 20%;
+  margin-right: 20%;
+  text-align: center;
+}
 
-  .stack {
-    margin-right: 10px;
-    color: blue;
-  }
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
 
-  .stack:last-child {
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  height: auto;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  margin: 20px;
+}
+
+.card:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  transform: scale(1.05);
+}
+
+.card-image {
+  width: 100%;
+  height: 60%; /* set the height to 60% */
+  object-fit: contain;
+}
+
+.card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: auto; /* set the height to 40% */
+  padding: 20px;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 
-  .stack-description {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 10px;
+.card-title {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.card-description {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.card-link {
+  display: block;
+  margin-top: 10px;
+  text-align: center;
+}
+
+.stack {
+  margin-right: 10px;
+  color: blue;
+}
+
+.stack:last-child {
+  margin-bottom: 20px;
+}
+
+.stack-description {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 10px;
+}
+
+.links {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+
+.project-link {
+  margin-right: 10px;
+}
+
+.hosted-link,
+.project-link {
+  background-color: black;
+  padding: 8px;
+  color: white;
+  margin-top: 10px;
+}
+
+.pdf-container {
+  background-color: transparent;
+  padding-left: 10%;
+  padding-right: 10%;
+  margin-top: 10%;
+}
+
+.testimonial-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.testimonial-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  margin: 20px;
+  background-color: #f7f7f7;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.testimonial-card:last-child {
+  margin-bottom: 60px;
+}
+
+.testimonial-content {
+  text-align: center;
+}
+
+.testimonial-name {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-top: 0;
+}
+
+.testimonial-title {
+  font-style: italic;
+  margin-top: 0;
+}
+
+.testimonial-text {
+  font-size: 1.1rem;
+  line-height: 1.5;
+  margin-top: 20px;
+}
+
+.LOR-link {
+  list-style-type: none;
+}
+
+.responsive-image {
+  width: 100%;
+  height: 60%;
+  object-fit: contain;
+}
+
+@media only screen and (max-width: 768px) {
+  .about-header {
+    font-size: 3rem;
   }
 
-  .links {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 5px;
-  }
-  
-  .project-link {
-    margin-right: 10px;
-  }
-  
-  .hosted-link, .project-link {
-    background-color: black;
-    padding: 8px;
-    color: white;
-    margin-top: 10px;
+  .about-paragraph {
+    font-size: 1.5rem;
+    width: 80%;
   }
 
   .pdf-container {
-    background-color: transparent;
-    padding-left: 10%;
-    padding-right: 10%;
-    margin-top: 10%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .about-header {
+    font-size: 2rem;
+  }
+  .about-container {
+    padding: 5px;
   }
 
-  .testimonial-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    max-width: 1000px;
-    margin: 0 auto;
-  }
-  
-  .testimonial-card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    margin: 20px;
-    background-color: #f7f7f7;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  .about-paragraph {
+    width: 80%;
+    margin-left: 10%;
+    margin-bottom: 10%;
   }
 
-  .testimonial-card:last-child {
-    margin-bottom: 60px;
-  }
-  
-  .testimonial-content {
-    text-align: center;
-  }
-  
-  .testimonial-name {
-    font-size: 1.2rem;
-    font-weight: bold;
-    margin-top: 0;
-  }
-  
-  .testimonial-title {
-    font-style: italic;
-    margin-top: 0;
-  }
-  
-  .testimonial-text {
-    font-size: 1.1rem;
-    line-height: 1.5;
-    margin-top: 20px;
-  }
-
-  .LOR-link {
-    list-style-type: none;
-  }
-
-  @media only screen and (max-width: 768px) {
-    .about-header {
-      font-size: 3rem;
-    }
-    
-    .about-paragraph {
-      font-size: 1.5rem;
-      width: 80%;
-    }
-
-    .pdf-container {
-      padding-left: 0;
-      padding-right: 0;
-    }
-
-  }
-
-  
-  @media only screen and (max-width: 480px) {
-    .about-header {
-      font-size: 2rem;
-    }
-      .about-container {
-        padding: 5px;
-      }
-
-      .about-paragraph {
-        width: 80%;
-        margin-left: 10%;
-        margin-bottom: 10%
-      }
-    
-    /* .about-paragraph {
+  /* .about-paragraph {
       font-size: 1rem;
       width: 100%;
     } */
 
-    .testimonial-card {
-      width: 100vw;
-    }
-  } 
+  .testimonial-card {
+    width: 100vw;
+  }
+}
